member detail layout. more.

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -49,7 +49,7 @@
 
     <div class="member-of-the-day">
         <div dir="ltr">
-            <span class="hidden-xs member-link" click.delegate="jump_to_member_of_the_day_page(member_of_the_day.id)">
+            <span class="member-link" click.delegate="jump_to_member_of_the_day_page(member_of_the_day.id)">
                 ${'home.to-the-page-of' & t} ${member_of_the_day.first_name}
             </span>
             <span class="hidden-xs hidden-sm member-text" css="direction:${theme.rtltr};">
