member of the day

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -49,9 +49,11 @@
 
     <div class="member-of-the-day">
         <div>
-            <span class="hidden-xs member-prefix">${member_prefix & t}</span>
-            <img class="member-image" src.bind="member_of_the_day.face_photo_url" />
-            <span class="member-name" css="direction:${theme.rtltr};">${member_of_the_day.name}</span>
+            <span>
+                <span class="hidden-xs member-prefix">${member_prefix & t}</span>
+                <img class="member-image" src.bind="member_of_the_day.face_photo_url" />
+                <span class="member-name" css="direction:${theme.rtltr};">${member_of_the_day.name}</span>
+            </span>
             <span class="hidden-xs hidden-sm member-text" css="direction:${theme.rtltr};">
                 ${member_of_the_day_life_cycle_text}
             </span>
