--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -133,7 +133,7 @@
                             </select>
                         </form>
                     </div>
-                    <div class="row" style="margin-top: 10px;float:right;" if.bind="can_set_dates">
+                    <div class="row" style="margin-top: 10px;margin-left:14px;" if.bind="can_set_dates">
                         <date-range 
                             label="${'photos.photos-date' & t}" 
                             base_date_str.bind="params.photos_date_str"
