start videos page

--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -1,6 +1,6 @@
 <template>
     <section class="container content-area">
-        <div class="row content-area" style="height:300px;width:100%;margin-top:20px;" dir="rtl">
+        <div class="row content-area" style="height:300px;width:100%;margin-top:20px;">
             <div class="row">
                 <div class="col-md-1">
                 </div>
