--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -1,119 +1,40 @@
 <template>
-    <section class="container content-area" css="height: ${win_height-600}px;">
-        <div class="row" css="margin-top:30px;background-image:url('${theme.files.top_background}');background-repeat:no-repeat">
-            <div style="background-color:rgba(120, 120, 120, 0.3);height:95px;padding-top:20px;padding-right:15px;">
-                <h1 dir="rtl"> ${"photos.photos-store" & t}</h1>
-            </div>
-        </div>
-        <div class="row content-area" style="height:300px;width:100%;margin-top:20px;" dir="rtl">
+    <require from="./videos.css"></require>
+    <section class="container content-area photos" css="height: ${win_height-304}px;">
+        <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:20px;padding-right:24px;" id="video-page">
             <div class="row">
-                <div class="col-md-1" css="padding-top: 40px;position:relative">
-                    <span css="position:absolute">${'photos.more' & t}</span>
-                    <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
-                    <span css="position:absolute">${'photos.less' & t}</span>
+                <div class="col-md-1">
                 </div>
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;">
-                        <form class="form-inline">
-                            <div class="form-group">
-                                <input dir="rtl" type="search" class="form-control" t="[placeholder]photos.filter" style="font-size:18px;height:38px;" value.bind="filter & debounce"/>
+
+                        <div class="col-md-1 col-md-offset-5" if.bind="user.editing" style="padding-top:18px;">
+                            <button click.delegate- "new_video()" class="btn btn-success cl-create-btn">
+                                <i class="far fa-plus-square"></i>
+                                ${'videos.new' & t}
+                            </button>
+                        </div>
+                        <div class="col-md-1 col-md-offset-5" if.bind="!user.editing"></div>
+                        <div class="col-md-6">
+                            <div class="input-group row" style="width:100%;margin-top:15px;">
+                                <search-input value.bind="filter" change.delegate="update_story_list()" placeholder="videos.filter" height="38"></search-input>
                             </div>
-                            <div class="form-group" if.bind="phase=='can-modify-tags'">
-                                <button class="btn btn-basic btn-md" click.trigger="save_merges($event)">
-                                    ${'photos.save-merges' & t}
-                                </button>
-                                <help topic="photos.can-modify-tags", position="bottom"></help>
-                            </div>
-                            <div class="form-group">
-                                <button if.bind="selected_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md"><i class="fa fa-upload fa-rotate-180 -fa-xs"></i></button>
-                            </div>
-                            <div class="form-group" if.bind="phase=='not-editing'">
-                                <help topic="photos-not-editing" position="bottom"></help>
-                            </div>
-                            <div class="form-group" if.bind="phase=='ready-to-edit'">
-                                <help topic="photos-ready-to-edit" position="bottom"></help>
-                            </div>
-                            <div class="form-group" if.bind="phase=='applying-to-photos'">
-                                <button
-                                     disabled.bind="params.selected_topics.length==0 && params.selected_photographers.length != 1"
-                                     class="btn btn-basic btn-md"
-                                     click.trigger="apply_to_selected()">
-                                     ${'photos.apply-to-selected' & t}
-                                </button>
-                                <help topic="apply-to-selected-photos" position="bottom"></help>
-                            </div>
-                            <div class="form-group" if.bind="phase=='selecting-photos'">
-                                <button 
-                                    click.trigger="finish_selecting()"
-                                    class="btn btn-basic btn-md">
-                                    ${'photos.done-selecting' & t}
-                                </button>
-                                <help topic="done-selecting-photos" position="bottom"></help>
-                            </div>
-                        </form>
+                        </div>
                     </div>
-                    <div class="row" id="photos-container" style="height:560px;overflow:auto;direction:rtl;margin:0;padding:0;">
-                        <span css="padding:0;margin:0;position:relative;width:${photo_size}px;height:${photo_size}px;" repeat.for="photo of photo_list | filter : filter : 'title' | take : 9999">
-                            <a click.trigger="photo_clicked(photo, $event)" class.bind="photo.selected">
-                                <img src="${photo.square_src}" aubs-tooltip="text.bind:photo.title" width="${photo_size}" height="${photo_size}" style="margin:0;" />
-                            </a>
-                            <a class="photo-maximizer" css="position:absolute;right:0px;top:${width/2}px;" 
-                                click.trigger="maximize_photo(photo, $event)">
-                                <i class="fa fa-expand fa-xs"></i>
-                            </a>
-                        </span>
+                    <div class="row">
+                        <div class="panel-vid">
+                            <span repeat.for="video of video_list | filter:'youtube':'type'" class="fr-video fr-fvc fr-draggable fr-dvi" contenteditable="false"
+                                draggable="true">
+                                <iframe src.bind="video.src" frameborder="0" allowfullscreen="" style="width: 204px; height: 121px;">
+                                </iframe>
+                            </span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-3">
-                    <div class="row">
-                        <multi-select options.bind="topic_list" 
-                            settings.bind="options_settings" 
-                            name="topics" 
-                            place_holder_text="photos.click-topic"
-                            change.delegate="handle_topic_change($event) ">
-                        </multi-select>
-                    </div>
-                    <div class="row ">
-                        <multi-select options.bind="photographer_list" 
-                            place_holder_text="photos.click-photographer" 
-                            settings.bind="photographers_settings"
-                            change.delegate="handle_photographer_change($event)">
-                        </multi-select>
-                    </div>
-                    <div class="row" style="margin-top: 20px;">
-                        <form role="form">
-                            <select value.bind="params.selected_days_since_upload" style="height:32px;width:90%;" change.delegate="handle_change($event)">
-                                <option repeat.for="option of days_since_upload_options" model.bind="option">${option.name}</option>
-                            </select>
-                        </form>
-                    </div>
-                    <div class="row" style="margin-top: 20px;" if.bind="user.isLoggedIn">
-                        <form role="form">
-                            <select value.bind="params.selected_uploader" style="height:32px;width:90%;" change.delegate="handle_change($event)">
-                                <option repeat.for="option of uploader_options" model.bind="option">${option.name}</option>
-                            </select>
-                        </form>
-                    </div>
-                    <div class="row" style="width:90%;margin-top: 20px;">
-                        <form class="form-horizontal" submit.delegate="handle_from_date($event)">
-                            <div class="form-group">
-                                <div class="col-sm-6">
-                                    <input type="text" id="from-date" value.bind="params.from_date & debounce" style="width:158%;margin-right:-32px;padding-right:6px;"
-                                        t="[placeholder]photos.enter-date" change.delegate="handle_change($event)">
-                                </div>
-                                <label class="col-sm-6 control-label" for="params.from-date & debounce">${'photos.from-date' & t}</label>
-                            </div>
-                            <div class="form-group">
-                                <div class="col-sm-6">
-                                    <input type="text" id="to-date" value.bind="params.to_date & debounce" style="width:158%;margin-right:-32px;padding-right:6px;"
-                                        t="[placeholder]photos.enter-date" change.delegate="handle_change($event)">
-                                </div>
-                                <label class="col-sm-6 control-label" for="to-date">${'photos.to-date' & t}</label>
-                            </div>
-                        </form>
-                    </div>
 
+                <div class="col-md-3">
                 </div>
             </div>
         </div>
-    </section></template>
+    </section>
+</template>
