--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -23,6 +23,7 @@
             <li class="font-size-130"><a class="dropdown-item" href="#" click.trigger="set_font_size(130)">${'abcde' & t}</a></li>
             <li class="font-size-140"><a class="dropdown-item" href="#" click.trigger="set_font_size(140)">${'abcde' & t}</a></li>
             <li class="font-size-150"><a class="dropdown-item" href="#" click.trigger="set_font_size(150)">${'abcde' & t}</a></li>
+            <li class="font-size-180"><a class="dropdown-item" href="#" click.trigger="set_font_size(180)">${'abcde' & t}</a></li>
         </ul>
     </div>
 
