--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -1,11 +1,9 @@
 <template>
     <require from="./videos.css"></require>
     <section class="container content-area photos" css="height: ${win_height-304}px;">
-        <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:20px;padding-right:24px;" id="video-page">
+        <div class="video-page row content-area" >
             <div class="row">
-                <div class="col-md-1">
-                </div>
-                <div class="col-md-8">
+                <div class="col-md-9">
                     <div class="row" style="margin-bottom:15px;">
 
                         <div class="col-md-1 col-md-offset-5" if.bind="user.editing" style="padding-top:18px;">
@@ -22,10 +20,12 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="panel-vid" ref="scroll_area">
-                            <span repeat.for="video of video_list | filter: filter : '*selected' : 'name'" class="fr-video fr-fvc fr-draggable fr-dvi" contenteditable="false"
+                        <div class="video-panel" ref="scroll_area">
+                            <span repeat.for="video of video_list | filter: filter : '*selected' : 'name'" 
+                                class="fr-video fr-fvc fr-draggable fr-dvi" 
+                                contenteditable="false"
                                 draggable="true">
-                                <iframe src.bind="video.src" frameborder="0" allowfullscreen="" style="width: 204px; height: 121px;">
+                                <iframe class="video-iframe" src.bind="video.src" frameborder="0" allowfullscreen="">
                                 </iframe>
                             </span>
                         </div>
