videos. wip. starts to work.

--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -27,6 +27,7 @@
                                 draggable="true">
                                 <iframe class="video-iframe" src.bind="video.src" frameborder="0" allowfullscreen="">
                                 </iframe>
+                                <span class="video-name">${video.name}</span>
                             </span>
                         </div>
                     </div>
