--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -5,6 +5,10 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="row" style="margin-bottom:15px;">
+                        <div class="col-md-1 paging-buttons" dir="ltr">
+                            <button t="[title]videos.prev" class="btn btn-default" click.delegate="page(-1, $event)" disabled.bind="prev_disabled"><i class="fas fa-chevron-left"></i></button>
+                            <button t="[title]videos.next" class="btn btn-default" click.delegate="page(+1, $event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
+                        </div>
 
                         <div class="col-md-1 col-md-offset-5" if.bind="user.editing" style="padding-top:18px;">
                             <button click.delegate="new_video()" class="btn btn-success cl-create-btn">
@@ -13,7 +17,7 @@
                             </button>
                         </div>
                         <div class="col-md-1 col-md-offset-5" if.bind="!user.editing"></div>
-                        <div class="col-md-6">
+                        <div class="col-md-5">
                             <div class="input-group row" style="width:100%;margin-top:15px;">
                                 <search-input value.bind="filter" placeholder="videos.filter" height="38"></search-input>
                             </div>
@@ -21,7 +25,7 @@
                     </div>
                     <div class="row">
                         <div class="video-panel" ref="scroll_area">
-                            <span repeat.for="video of video_list | filter: filter : '*selected' : 'name'" 
+                            <span repeat.for="video of video_list | filter: filter : '*selected' : 'name' | take : videos_per_page : first_index" 
                                 class="fr-video fr-fvc fr-draggable fr-dvi" 
                                 contenteditable="false"
                                 draggable="true">
