--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -10,16 +10,39 @@
                             <button t="[title]videos.next" class="btn btn-default" click.delegate="page(+1, $event)" disabled.bind="next_disabled"><i class="fas fa-chevron-right"></i></button>
                         </div>
 
-                        <div class="col-md-1 col-md-offset-5" if.bind="user.editing" style="padding-top:3px;">
+                        <!--<div class="col-md-1 col-md-offset-5" if.bind="phase=='photos-ready-to-edit''" style="padding-top:3px;">
                             <button click.delegate="new_video()" class="btn btn-success cl-create-btn">
                                 <i class="far fa-plus-square"></i>
                                 ${'videos.new' & t}
                             </button>
-                        </div>
-                        <div class="col-md-1 col-md-offset-5" if.bind="!user.editing"></div>
-                        <div class="col-md-5">
-                            <div class="input-group row" style="width:100%;">
+                        </div>-->
+                        <!--<div class="col-md-11 col-md-offset-5" if.bind="!user.editing"></div>-->
+                        <div class="col-md-10 col-md-offset-1 ctrls-group">
+                            <div class="input-group row" style="width:40%;margin-left:20px;">
                                 <search-input value.bind="filter" placeholder="videos.filter" height="38"></search-input>
+                            </div>
+                            <div if.bind="phase=='photos-ready-to-edit'" class="ctrl">
+                                <button click.delegate="new_video()" class="btn btn-success cl-create-btn">
+                                    <i class="far fa-plus-square"></i>
+                                    ${'videos.new' & t}
+                                </button>
+                            </div>
+                            <div if.bind="phase=='videos-were-selected'" class="ctrl">
+                                <button 
+                                    disabled.bind="params.selected_topics.length==0 && params.selected_photographers.length != 1 && params.photos_date_str == ''"
+                                    class="btn btn-default btn-md" 
+                                    click.trigger="apply_to_selected()">
+                                    ${'photos.apply-to-selected' & t}
+                                </button>
+                                <help topic="apply-to-selected-photos" position="bottom"></help>
+                            </div>
+                            <div class="ctrl" if.bind="phase=='can-modify-tags'">
+                                <button 
+                                    class="btn btn-default btn-md" 
+                                    click.trigger="save_merges($event)">
+                                    ${'photos.save-merges' & t}
+                                </button>
+                                <help topic="photos.can-modify-tags", position="bottom"></help>
                             </div>
                         </div>
                     </div>
@@ -44,6 +67,7 @@
                 </div>
 
                 <div class="col-md-3">
+                    <span show.bind="false">${user_editing}</span>
                     <div class="row" style="margin-bottom:15px;position:relative;">
                         <help topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <multi-select options.bind="topic_list"
@@ -54,6 +78,19 @@
                             place_holder_text="photos.click-topic"
                             clear_selections_now.bind="clear_selected_topics_now"
                             ms-change.delegate="handle_topic_change($event) ">
+                        </multi-select>
+                    </div>
+                    <div class="row">
+                        <multi-select options.bind="photographer_list"
+                            place_holder_text="photos.click-photographer"
+                            selected_options.bind="params.selected_photographers"
+                            settings.bind="photographers_settings"
+                            has_groups.bind="has_grouped_photographers"
+                            new-name.delegate="add_photographer($event)"
+                            remove-option.delegate="remove_photographer($event)"
+                            name-changed.delegate="photographer_name_changed($event)"
+                            clear_selections_now.bind="clear_selected_phototgraphers_now"
+                            ms-change.delegate="handle_photographer_change($event)">
                         </multi-select>
                     </div>
                 </div>
