--- a/src/videos/add-video.html
+++ b/src/videos/add-video.html
@@ -8,22 +8,24 @@
             <div class="panel-body">
                 <form role="form" class="form-vertical">
                     <div style="margin-bottom:16px">
-                        <div class="form-group" style="margin-bottom:12px">
+                        <div class="form-group" style="margin-bottom:12px" if.bind="! params.id">
                             <input type="text" value.bind="params.video_address" class="form-control input-lg"
                                 t="[placeholder]videos.paste-video-address" >
                         </div>
                         <div class="form-group">
-                            <input type="text" id="name" class="form-control input-lg" value.bind="params.video_name" t="[placeholder]videos.video-name">
+                            <input type="text" id="name" class="form-control input-lg" value.bind="params.name" t="[placeholder]videos.video-name">
                         </div>
                     </div>
                 </form>
             </div>
         </ux-dialog-body>
         <ux-dialog-footer style="padding-right:32px;">
-            <button class="btn btn-danger btn-warning" click.trigger="cancel()">${'stories.cancel' & t}</button>
-            <button class="btn btn-success btn-primary" click.trigger="send()" disabled.bind="is_disabled">
-            ${'videos.send' & t}
-        </button>
+            <button class="btn btn-danger btn-warning" click.trigger="cancel()">
+                ${'stories.cancel' & t}
+            </button>
+            <button class="btn btn-success btn-primary" click.trigger="send()" disabled.bind="! dirty">
+                ${'videos.send' & t}
+            </button>
         </ux-dialog-footer>
     </ux-dialog>
 </template>
