--- a/src/videos/add-video.html
+++ b/src/videos/add-video.html
@@ -9,11 +9,20 @@
                 <form role="form" class="form-vertical">
                     <div style="margin-bottom:16px">
                         <div class="form-group" style="margin-bottom:12px" if.bind="! params.id">
-                            <input type="text" value.bind="params.video_address" class="form-control input-lg"
+                            <input type="text" value.bind="params.src" class="form-control input-lg"
                                 t="[placeholder]videos.paste-video-address" >
                         </div>
                         <div class="form-group">
                             <input type="text" id="name" class="form-control input-lg" value.bind="params.name" t="[placeholder]videos.video-name">
+                        </div>
+                        <div class="form-group">
+                            <date-range
+                                range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
+                                label="${'videos.video-date-range' & t}"
+                                base_date_str.bind="params.video_date_datestr"
+                                span_size.bind="params.video_date_datespan"
+                                id="video-date">
+                            </date-range>
                         </div>
                     </div>
                 </form>
