--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -72,7 +72,7 @@
                 <div class="form-group" style="margin-top:10px;">
                     <div class="col-md-6" style="padding-left:0;min-width:100%">
                         <date-range
-                            label="${'members.date-of-death' & t}"
+                            label="members.date-of-death"
                             base_date_str.bind="member.member_info.date_of_death.date"
                             span_size.bind="member.member_info.date_of_death.span"
                             id="date-of-death">
@@ -107,7 +107,7 @@
                 <div class="form-group" style="margin-top:10px;">
                     <div class="col-md-6" style="padding-left:0;min-width:100%;">
                         <date-range
-                            label="${'members.date-of-birth' & t}"
+                            label="members.date-of-birth"
                             base_date_str.bind="member.member_info.date_of_birth.date"
                             span_size.bind="member.member_info.date_of_birth.span"
                             id="date-of-birth">
