--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -37,7 +37,7 @@
                         </button>
                     </form>
                 </span>
-                <date-range label="${'photos.photo-date' & t}" 
+                <date-range label="photos.photo-date" 
                     range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
                     change.delegate="save_photo_info($event)"
                     base_date_str.bind="photo_info.photo_date_str" 
