--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="row" style="margin-top: 10px;margin-left:14px;" if.bind="can_set_dates">
                         <date-range 
-                            label="${'photos.photos-date' & t}" 
+                            label="photos.photos-date" 
                             base_date_str.bind="params.photos_date_str"
                             range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]" 
                             date_span_size.bind="params.photos_date_span_size">
