--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -29,7 +29,7 @@
                             <p dir="rtl" if.bind="! user.editing" innerhtml.bind="photo_story.story_text">
                             </p>
                             <editable if.bind="user.editing" settings.bind="{show_date:false, class:'story-section', checkable: false}" story.bind="photo_story"></editable>
-                            <date-range label="${'photos.photo-date' & t}" 
+                            <date-range label="photos.photo-date" 
                                 base_date_str.bind="photo_date_str" 
                                 hide_label_if_no_date.bind="true"
                                 span_size.bind="photo_date_datespan"
