--- a/src/videos/add-video.html
+++ b/src/videos/add-video.html
@@ -18,7 +18,7 @@
                         <div class="form-group">
                             <date-range
                                 range_options.bind="[1,2,3,5,10, 20, 50, 100, 120]"
-                                label="${'videos.video-date-range' & t}"
+                                label="videos.video-date-range"
                                 base_date_str.bind="params.video_date_datestr"
                                 span_size.bind="params.video_date_datespan"
                                 id="video-date">
