--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -52,7 +52,7 @@
                                         <i class="far fa-pencil" click.delegate="edit_video_info(video)"></i>
                                     </span>
                                     <span>
-                                        <info title.bind="video_info_title(video)" content.bind="video_info_content(video)" style="margin-right:-8px;"></info>
+                                        <info title.bind="video_info_title(video)" content.bind="video.video_info_content" style="margin-right:-8px;"></info>
                                     </span>
                                     ${video.name}
                                 </span>
